src/nationalarchives/components/index-grid/index-grid.scss
@use "sass:math";
@use "../../tools/colour";
@use "../../tools/media";
@use "../../tools/spacing";
@use "../../tools/typography";
@use "../../utilities";
@use "../grid";

.tna-index-grid {
  @include spacing.space-above;

  &__heading {
  }

  &__items {
    @include spacing.space-above;

    margin-bottom: 0;

    display: flex;
    gap: 2rem 0;

    list-style: none;
  }

  &__item {
    @include colour.contrast;

    height: 100%;

    display: flex;
    flex-direction: column;

    position: relative;

    text-decoration: none;

    @include colour.on-high-contrast-and-forced-colours {
      @include colour.colour-border("keyline-dark", 1px);
    }
  }

  &__item-image {
    width: 100%;
    height: auto;
  }

  &__item-content {
    padding: 1rem;

    flex: 1;
  }

  &__item-label {
    position: absolute;
    top: 0.5rem;
    left: 0.5rem;
  }

  &__item-title {
    text-decoration: underline;

    .tna-index-grid__item:hover & {
      &,
      &:link,
      &:visited {
        @include typography.interacted-text-decoration;
      }
    }
  }

  &__item-subtitle {
    @include colour.colour-font("font-light");
    @include typography.relative-font-size(16);
  }
}

